<resources>
    <string name="app_name">Actividad 4 Programación Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Opcion 1</string>
    <string name="menu_gallery">Opcion 2</string>
    <string name="menu_slideshow">Opcion 3</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitud">Latitud</string>
    <string name="buscar_cordenadas">Buscar Cordenadas</string>
    <string name="longitud">Longitud</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
</resources>